@@ -72,7 +72,10 @@ version 2.91
         a DHCP relay. This change allows dnsmasq to act as both a
         PXE proxy-DHCP server AND a DHCP relay for the same network.
 
-	
+	Fix erroneous "DNSSEC validated" state with non-DNSSEC
+	upstream servers.  Thanks to Dominik Derigs for the bug report.
+
+
 version 2.90
 	Fix reversion in --rev-server introduced in 2.88 which
 	caused breakage if the prefix length is not exactly divisible
